samples/_failures_safe/1761253866_4a1a51_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e28d7071.c: In function ‘main’:
./samples/SAFE/__tmp_e28d7071.c:151:9: error: expected declaration or statement at end of input
  151 |         initialize_machine(&test_sm);
      |         ^~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_e28d7071.c:151:9: error: expected declaration or statement at end of input
